--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Overview <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#overview">Action</a></li>
+                        <li><a href="#tv-show-grafics">Action</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -77,13 +77,6 @@
                         <li><a href="#/speaker-overview-table">Overview Table</a></li>
                         <li><a href="#/speaker-single-view">Single Speakers</a></li>
                         <li><a href="#/speaker-comparison">Comparison</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">TV-Show <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#/tv-show-grafics">Graphs</a></li>
                     </ul>
                 </li>
             </ul>
