--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
         <div class="collapse navbar-collapse" ng-controller="navbarCtrl" id="navbar">
 
             <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Overview <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#tv-show-grafics">Action</a></li>
-                    </ul>
+                <li>
+                    <a href="#tv-show-grafics">Overview</a>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
