fix console errors, table reload errors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/libs/nv.d3.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.7/angular-nvd3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.7/angular-nvd3.js"></script>
     <!--<script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>-->
 
     <!-- Latest compiled and minified JavaScript -->
